--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<title></title>
 </head>
 <body>
-	<div class="container">
+	<section class="container">
 		<h2>Sobre Nós</h2>
 		<img class="img-responsive" src="img/empresa.jpg">
 
@@ -46,7 +46,115 @@
 				</div>
 			</div>
 		</div>
+	</section>
+
+	<div class="jumbotron">
+		<div class="container">
+			<h3>Mais de 300 prêmios em design em conforto.</h3>
+			<p>Mais de 5 milhões satisfeito em todo o mundo</p>
+		</div>
 	</div>
+
+	<section class="container">
+		<h2>Nossos Projetos</h2>
+		<figure class="thumbnail">
+	     	<img class="img-responsive" src="img/projetos/casa-castelo.png" alt="Foto da Casa Castelo">
+		    <figcaption class="caption">
+		    	<h3>Casa Castelo</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia</p>
+		    </figcaption>
+	    </figure>
+
+	    <figure class="thumbnail">
+	     	<img class="img-responsive" src="img/projetos/casa-lago.png" alt="Foto da Casa Castelo">
+		    <figcaption class="caption">
+		    	<h3>Casa Lago</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia</p>
+		    </figcaption>
+	    </figure>
+
+	    <figure class="thumbnail">
+	     	<img class="img-responsive" src="img/projetos/mercado-marapira.png" alt="Foto da Casa Castelo">
+		    <figcaption class="caption">
+		    	<h3>Mercado Marapira</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia</p>
+		    </figcaption>
+	    </figure>
+
+	    <figure class="thumbnail">
+	     	<img class="img-responsive" src="img/projetos/palacio-dionisio.png" alt="Foto da Casa Castelo">
+		    <figcaption class="caption">
+		    	<h3>Palácio Dionísio</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia</p>
+		    </figcaption>
+	    </figure>
+
+	    <figure class="thumbnail">
+	     	<img class="img-responsive" src="img/projetos/residencia-ludi.png" alt="Foto da Casa Castelo">
+		    <figcaption class="caption">
+		    	<h3>Residência Ludi</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia</p>
+		    </figcaption>
+	    </figure>
+	</section>
+
+	<section>
+		<h2 class="container titulo-depoimentos">Depoimentos de Clientes</h2>
+
+		<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+	  <!-- Indicators -->
+		  <ol class="carousel-indicators">
+		    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+		    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+		    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+		  </ol>
+
+	  <!-- Wrapper for slides -->
+		  <div class="carousel-inner" role="listbox">
+		    <div class="item active">
+		      <img src="img/depoimentos/depo1.png">
+		      <div class="carousel-caption">
+		        <h3>Yuri Padilha</h3>
+				<p>Gostei muito</p>
+		      </div>
+		    </div>
+		    <div class="item">
+		     <img src="img/depoimentos/depo2.png">
+		      <div class="carousel-caption">
+		        <h3>Wesley Gomes</h3>
+				<p>Excelente trabalho</p>
+		      </div>
+		    </div>
+		    <div class="item">
+		     <img src="img/depoimentos/depo3.png">
+		      <div class="carousel-caption">
+		        <h3>Fernando Sousa</h3>
+				<p>Competência em primero lugar</p>
+		      </div>
+		    </div>
+		  </div>
+
+	  	<!-- Controls -->
+		  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+		    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+		    <span class="sr-only">Previous</span>
+		  </a>
+		  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+		    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+		    <span class="sr-only">Next</span>
+		  </a>
+		</div>
+	</section>
+
+	<h2>Vídeo Institucional</h2>
+	
+	
+
 	<script type="text/javascript" src="jquery.min.js"></script>
 	<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 </body>
