--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<header>
 		<nav class="navbar navbar-default">
 			<div class="container">
-				 <div class="navbar-header">
+				<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
 						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
@@ -34,46 +34,50 @@
 				</div>
 			</div>
 		</nav>
-		<div class="topcasa-banner">
-			<h1>TopCaaFina Arquitetura</h1>
-			<p>Projetando a casa dos sonhos desde 2000 AC</p>
-			<button class="btn btn-primary btn-lg">Contate-nos agora</button>
+		<div class="container tocasafina-banner-happer">
+			<div class="topcasa-banner">
+				<h1>TopCasaFina Arquitetura</h1>
+				<p>Projetando a casa dos sonhos desde 2000 AC</p>
+				<button class="btn btn-primary btn-lg">Contate-nos agora</button>
+			</div>
 		</div>
 	</header>
 
 	<section id="sobre-nos" class="container">
 		<h2>Sobre Nós</h2>
-		<img class="img-responsive" src="img/empresa.jpg">
+		<div class="row">
+			<img class="img-responsive col-lg-6 col-md-6 col-sm-6 col-xs-12" src="img/empresa.jpg">
 
-		<div id="paineis-sobre" class="panel-group margtop--2">
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<h3 class="panel-title" data-toggle="collapse" data-target="#primeiro" data-parent="#paineis-sobre">Desde 1935</h3>
-				</div>
-				<div id="primeiro" class="collapse in">
-					<div class="panel-body">
-						<p >Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+			<div id="paineis-sobre" class="panel-group margtop--2 col-lg-6 col-md-6 col-sm-6 col-xs-12">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h3 class="panel-title" data-toggle="collapse" data-target="#primeiro" data-parent="#paineis-sobre">Desde 1935</h3>
 					</div>
-				</div>
-			</div>		
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<h3 class="panel-title" data-toggle="collapse" data-target="#segundo" data-parent="#paineis-sobre">Desde 1935</h3>
-				</div>	
-				<div id="segundo" class="collapse">
-					<div class="panel-body">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+					<div id="primeiro" class="collapse in">
+						<div class="panel-body">
+							<p >Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+						</div>
 					</div>
-				</div>			
-			</div>
+				</div>		
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h3 class="panel-title" data-toggle="collapse" data-target="#segundo" data-parent="#paineis-sobre">Desde 1935</h3>
+					</div>	
+					<div id="segundo" class="collapse">
+						<div class="panel-body">
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+						</div>
+					</div>			
+				</div>
 
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<h3 class="panel-title" data-toggle="collapse" data-target="#terceiro" data-parent="#paineis-sobre">Desde 1935</h3>
-				</div>
-				<div id="terceiro" class="collapse">
-					<div class="panel-body">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h3 class="panel-title" data-toggle="collapse" data-target="#terceiro" data-parent="#paineis-sobre">Desde 1935</h3>
+					</div>
+					<div id="terceiro" class="collapse">
+						<div class="panel-body">
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -89,114 +93,125 @@
 
 	<section id="nossos-projetos" class="container">
 		<h2>Nossos Projetos</h2>
-		<figure class="thumbnail">
-	     	<img class="img-responsive" src="img/projetos/casa-castelo.png" alt="Foto da Casa Castelo">
-		    <figcaption class="caption">
-		    	<h3>Casa Castelo</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia</p>
-		    </figcaption>
-	    </figure>
+		<div class="row">
+			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+				<figure class="thumbnail">
+					<img class="img-responsive" src="img/projetos/casa-castelo.png" alt="Foto da Casa Castelo">
+					<figcaption class="caption">
+						<h3>Casa Castelo</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia</p>
+						</figcaption>
+					</figure>
+				</div>
 
-	    <figure class="thumbnail">
-	     	<img class="img-responsive" src="img/projetos/casa-lago.png" alt="Foto da Casa Castelo">
-		    <figcaption class="caption">
-		    	<h3>Casa Lago</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia</p>
-		    </figcaption>
-	    </figure>
+				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+					<figure class="thumbnail">
+						<img class="img-responsive" src="img/projetos/casa-lago.png" alt="Foto da Casa Castelo">
+						<figcaption class="caption">
+							<h3>Casa Lago</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia</p>
+							</figcaption>
+						</figure>
+					</div>
 
-	    <figure class="thumbnail">
-	     	<img class="img-responsive" src="img/projetos/mercado-marapira.png" alt="Foto da Casa Castelo">
-		    <figcaption class="caption">
-		    	<h3>Mercado Marapira</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia</p>
-		    </figcaption>
-	    </figure>
+					<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+						<figure class="thumbnail">
+							<img class="img-responsive" src="img/projetos/mercado-marapira.png" alt="Foto da Casa Castelo">
+							<figcaption class="caption">
+								<h3>Mercado Marapira</h3>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+									tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia</p>
+								</figcaption>
+							</figure>
+						</div>
+						<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+							<figure class="thumbnail">
+								<img class="img-responsive" src="img/projetos/palacio-dionisio.png" alt="Foto da Casa Castelo">
+								<figcaption class="caption">
+									<h3>Palácio Dionísio</h3>
+									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+										tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia</p>
+									</figcaption>
+								</figure>
+							</div>
+							<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+								<figure class="thumbnail">
+									<img class="img-responsive" src="img/projetos/residencia-ludi.png" alt="Foto da Casa Castelo">
+									<figcaption class="caption">
+										<h3>Residência Ludi</h3>
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+											tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia</p>
+										</figcaption>
+									</figure>
+								</div>
+							</div>
+						</section>
 
-	    <figure class="thumbnail">
-	     	<img class="img-responsive" src="img/projetos/palacio-dionisio.png" alt="Foto da Casa Castelo">
-		    <figcaption class="caption">
-		    	<h3>Palácio Dionísio</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia</p>
-		    </figcaption>
-	    </figure>
+						<section id="depoimentos">
+							<h2 class="container titulo-depoimentos">Depoimentos de Clientes</h2>
 
-	    <figure class="thumbnail">
-	     	<img class="img-responsive" src="img/projetos/residencia-ludi.png" alt="Foto da Casa Castelo">
-		    <figcaption class="caption">
-		    	<h3>Residência Ludi</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia</p>
-		    </figcaption>
-	    </figure>
-	</section>
+							<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+								<!-- Indicators -->
+								<ol class="carousel-indicators">
+									<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+									<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+									<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+								</ol>
 
-	<section id="depoimentos">
-		<h2 class="container titulo-depoimentos">Depoimentos de Clientes</h2>
+								<!-- Wrapper for slides -->
+								<div class="carousel-inner" role="listbox">
+									<div class="item active">
+										<img src="img/depoimentos/depo1.png">
+										<div class="carousel-caption">
+											<h3>Yuri Padilha</h3>
+											<p>Gostei muito</p>
+										</div>
+									</div>
+									<div class="item">
+										<img src="img/depoimentos/depo2.png">
+										<div class="carousel-caption">
+											<h3>Wesley Gomes</h3>
+											<p>Excelente trabalho</p>
+										</div>
+									</div>
+									<div class="item">
+										<img src="img/depoimentos/depo3.png">
+										<div class="carousel-caption">
+											<h3>Fernando Sousa</h3>
+											<p>Competência em primero lugar</p>
+										</div>
+									</div>
+								</div>
 
-		<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-	  <!-- Indicators -->
-		  <ol class="carousel-indicators">
-		    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-		    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-		    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-		  </ol>
+								<!-- Controls -->
+								<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+									<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+									<span class="sr-only">Previous</span>
+								</a>
+								<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+									<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+									<span class="sr-only">Next</span>
+								</a>
+							</div>
+						</section>
 
-	  <!-- Wrapper for slides -->
-		  <div class="carousel-inner" role="listbox">
-		    <div class="item active">
-		      <img src="img/depoimentos/depo1.png">
-		      <div class="carousel-caption">
-		        <h3>Yuri Padilha</h3>
-				<p>Gostei muito</p>
-		      </div>
-		    </div>
-		    <div class="item">
-		     <img src="img/depoimentos/depo2.png">
-		      <div class="carousel-caption">
-		        <h3>Wesley Gomes</h3>
-				<p>Excelente trabalho</p>
-		      </div>
-		    </div>
-		    <div class="item">
-		     <img src="img/depoimentos/depo3.png">
-		      <div class="carousel-caption">
-		        <h3>Fernando Sousa</h3>
-				<p>Competência em primero lugar</p>
-		      </div>
-		    </div>
-		  </div>
+						<!-- Video Institucional -->
+						<footer>
+							<address>
+								<strong>TopCasaFina Arquitetura</strong><br>
+								Rua Vergueiro, 3182, Vila Mariana<br>
+								São Paulo - SP <br>
+								<abbr class="title">Tel:</abbr> (11) 5571-1254 ou 5031-1474 <br>
+							</address>		
+							<address>
+								Email: contato.topcasafina.com.br
+							</address>
+						</footer>
 
-	  	<!-- Controls -->
-		  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-		    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-		    <span class="sr-only">Previous</span>
-		  </a>
-		  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-		    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-		    <span class="sr-only">Next</span>
-		  </a>
-		</div>
-	</section>
-
-	<!-- Video Institucional -->
-	<footer>
-		<address>
-			<strong>TopCasaFina Arquitetura</strong><br>
-			Rua Vergueiro, 3182, Vila Mariana<br>
-			São Paulo - SP <br>
-			<abbr class="title">Tel:</abbr> (11) 5571-1254 ou 5031-1474 <br>
-		</address>		
-		<address>
-			Email: contato.topcasafina.com.br
-		</address>
-	</footer>
-
-	<script type="text/javascript" src="jquery.min.js"></script>
-	<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
-</body>
-</html>
+						<script type="text/javascript" src="jquery.min.js"></script>
+						<script type="text/javascript" src="script.js"></script>
+						<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+					</body>
+					</html>
